<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/correoRegistroUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correoElectronico"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/userRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passwordRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnRegistroCompletado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo"
            android:text="@string/registrarse" />
    </LinearLayout>
</LinearLayout>