<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".main.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/correoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/correoElectronico"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160sp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo"
            android:gravity="center"
            android:text="@string/login" />

        <TextView
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160sp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/btnEntrarDedo"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:paddingTop="80sp"
            android:layout_marginTop="200sp"
            android:background="@drawable/white_finger">

        </ImageButton>
    </LinearLayout>

</RelativeLayout>

